# playground

./: .package.json.swp  BookmarkService.postman_collection.json  Dockerfile  LICENSE  README.md  __init__.py  app.py  config.py  config.toml  docker-compose.yml  extensions.py  jsondb.py  manage.py  package.toml  postinstall.py  pyproject.toml  qn.py  requirements.txt  setup.py  stoicquote.py  test_jsondb.py  tmt.py  urlr.py
aws_docs_generation/: generate.py  model_generation.py  requirements.txt
aws_service_list/: .gitignore  developer_and_userguide_links.json  doc_dump.py  landing_page_links.json  service_dump.py  service_list.json
benchmark_model_load/: benchmark_lazy_attr.py  benchmark_results.csv
bookmark-service/: .gitignore  .pre-commit-config.yaml  Dockerfile.test  app.py  config.py  docker-compose.yml  manage.py  pyproject.toml  run_tests.sh  utils.py
bookmark-service/migrations/: env.py
bookmark-service/migrations/versions/: 9a9a94ccb2fd_initial_migration.py
bookmark-service/models/: bookmark.py  user.py
bookmark-service/resources/: bookmark.py  token.py  user.py
bookmark-service/schemas/: bookmark.py  pagination.py  user.py
bookmark-service/tests/: test_user.py
bookmark_export/: export2md.py  html2md.py
chatcompletion_logger/: api_logger.py  logs.csv  model_pricing.json  usage.ipynb
color-rs/: Cargo.toml  Dockerfile  README.md
common/: pyproject.toml
config/: .pre-commit-config.yaml  black.json  console.xml  lfrc  loki-local-config.yaml  pyproject.toml  settings.json  sidebar_dark.rasi  tasks.json
convert_typehint/: ast_sample_code.json  convert_typehint_ast.py  jsonify_node.py  sample_code.py  test_conversion.py
dash_crypto/: app.py  requirements.txt
data_logging/: README.md  gpp4323.py  sqlgpp.py
dataset/: README.md  amd.json  chip.csv
db/: products.json  restaurant.json
docker_frozen_download/: README.md  changes.diff  download-frozen-image-v2.sh
echo_server/: .clang-format  Makefile  README.md  bench.py  server.c
elevator_simulation/: go.mod  main.go
embedded/: comm_test.py  test_mqtt.py
field_search/: field_search_json.py  test_field_search_json.py
find_file_ext/: ffe.cpp  snippet.cpp
from_hr_challenge/: ath_sort.py  cal.py  doormat.py  find_per.py  find_string.py  itertools_perm.py  itertools_product.py  list_comp.py  merge_tool.py  no_idea.py  py_list.py  rangoli.py  str_format.py  text_wrap.py  time_delta.py
function_extract/: extract_function.py  test.py
gazorpazorp/tools/gradio_app1/: app.py  pyproject.toml  requirements.txt
gocron-heap-observation/: .gitignore  README.md  go.mod  go.sum  main.go  memory_stats.csv
golog/: console_handler.go  go.mod  go.sum  main.go
google_books/: README.md  go.mod  main.go
groovy_serdes/: json_deser.groovy  json_ser.groovy  models.groovy  person.json
hypothesis_parallel/: requirements.txt  test_operations.py
infra_automation/: docker_clean.sh  eth_info.sh  nvidia_driver_setup.sh  ssh_setup.py
jenkins_metrics/: Dockerfile  Dockerfile.ci  README.md  docker-compose.yaml  encode.py
jenkins_observability/: .dockerignore  .gitignore  Dockerfile.ci  README.md  dashboard.json  docker-compose-postgres.yaml  docker-compose.yaml  getPlugins.groovy  grafana.ini  jenkins.yml  list_jenkins_builds.py  plugins.txt  prometheus.yml  reset.sh  tempo.yaml  test_traces.py
jenkins_testing/: Dockerfile  build.gradle  gradle.properties  install.sh  jenkinsPipeline.groovy  jenkinsPipelineTest.groovy
json-rpc-server-ts/: package-lock.json  package.json
jsondb_archived/: .gitignore  jsondb.py  test_jsondb.py
jsonnet_exp/: README.md  collatz.json  collatz.jsonnet  input.json  process_input.jsonnet
langchain_sparql_fix/: requirements.txt  sparql_generation_fix.py  test.py  test.ttl
langchain_utils/: agent_log_adapter.py  agent_log_explorer.py  requirements.txt
linkexp/: README.md  go.mod  requirements.txt
metaclass/: frozenmeta.py  json_exporter.py  register_subclass.py
misc/: Dockerfile  Dockerfile.racket.aarch64  async_test.py  base64.cpp  chainable_template.py  change_stream_listener_mongodb.py  class_log.py  class_size_comparison.py  class_size_comparison_results.md  cleanup.py  close_to_typestate.py  commands.sh  devbox.sh  dispatch.py  dump.go  export_sessions.py  extractor.py  file.rs  get-todo.cpp  get_arxiv_dataset.sh  git_pull.sh  ifsc.html  jenkins_analyzer.py  jenkins_dir.py  locustfile.py  mlflow_kats.py  mongo_info.py  mongodb_model.py  monitor_setup.sh  namesgenerator.py  nonce.py  notes_script  px.py  pypackagesize.sh  rich_logger.py  sparql_ui.py  spy_on_change.py  state.c  status_code.py  sysinfo.py  (+3 more)
mockhttp_server/: mock_server.py
models/: user.py
modern_cpp_code_samples/: double_and_insert.cpp  elimduplicates.cpp  reverse_paren.cpp  user_defined.cpp
mongo_changestream_listener_exp/: .gitignore  README.md  change_stream_listener.py  cleanup.sh  docker-compose.yaml
no_singular_matrices/: no_singular_matrices.py  note.md
plato_standford/: .gitignore  main.py  pyproject.toml
postinstall/: config.toml  setup.py
public/: index.html  manifest.json
pydantic_rdflib/: README.md  main.py  requirements.txt  test.py  test.ttl
qn_archived/: pyproject.toml  qn.py
query_drop/: README.md  qd.py  requirements.txt
racket_dev/: Dockerfile.racket  Dockerfile.racket-jupyter  Dockerfile.racket.aarch64  build  build.sh  code_setup.sh  extensions.txt  install_extensions.sh
radio/: radio
react-counter-app/: README.md  package-lock.json  package.json
refdata_api/: config.json  pyproject.toml
refdata_api/misc/: locustfile.py  notebook.ipynb
refdata_api/src/: app.py  model.py  router.py
resources/: bookmark.py  user.py
rule-rhythms/: .gitignore  rule-rhythms.cabal
rule-rhythms/src/: Main.hs  Rule110.hs  Util.hs
rust_tidbits/: default_trait.rs  macro.rs  pass_manager.rs
sample_music_ontology/: music_ontology.py  music_ontology.ttl  requirements.txt
scripts/: spotify
(+306 files in other folders)
