[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

# packages = [
#     { include = "common/*.py", from="."},
#     { include = "common/data/*", from="."},
# ]



[tool.poetry.dependencies]
python = "~3.10"
pandas = "2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
