[tool.poetry]
name = "qn"
version = "0.1.2"
description = "quick markdown notes from terminal"
authors = ["neelabalan <neelabalan.n@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.14.0"
typer = {extras = ["all"], version = "^0.4.0"}
toml = "^0.10.2"
cryptography = "^36.0.1"
jsondb = {git = "https://github.com/neelabalan/jsondb.git", rev = "main"}
pyskim = {git = "https://github.com/neelabalan/pyskim.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qn = "qn:run"
