[tool.poetry]
name = "reference_api"
version = "0.1.0"
description = ""
authors = ["Neelabalan N"]

[tool.poetry.dependencies]
python = "^3.10"
traits = "^6.3.2"
pandas = "^1.4.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"
locust = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
