[tool.poetry]
name = "gradio_app1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
gradio = "4.0.2"

[tool.poetry.group.internal.dependencies]
common = {path = "../../common", develop = true}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
